2003-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-examine-modules): Ignore the shimbun modules
	which need xml.el if it is not available.

2003-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-get-headers): Don't use
	`save-match-data'
	* shimbun/sb-gnome.el (shimbun-get-headers): Ditto.
	* shimbun/sb-yomiuri.el (shimbun-yomiuri-get-headers): Ditto.

2003-06-18  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/shimbun.el (shimbun-mime-encode-string): Use
	`save-match-data'.

2003-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Improve the last change.

2003-06-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-anthy.el: Removed.

	* shimbun/sb-canna-dev.el: Removed.

	* shimbun/sb-mozilla-jp.el: Renamed from `shimbun/sb-moz-users.el'.

2003-06-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release emacs-w3m-1.3.4 from emacs-w3m-1_3 branch.

2003-06-18  Koichiro Ohba  <koichiro@meadowy.org>

	* shimbun/sb-rss.el (shimbun-rss-get-encoding): Simplify.

2003-06-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-pocketgames.el (shimbun-reply-to): Insert docstring
	to avoid the bug of XEmacs's byte compiler.

	* shimbun/sb-pilot-mailsync.el (shimbun-reply-to): Ditto.

	* shimbun/sb-dennou.el (shimbun-reply-to): Ditto.

	* shimbun/sb-security-memo.el (shimbun-reply-to): Ditto.

	* w3m.el (w3m-arrived-ignored-regexp): Use "\`" instead of "^".
	(w3m-history-ignored-regexp): Ditto.
	(w3m-url-transfer-encode-string): New inline function.
	(w3m-fontify-anchors): Encode URL with the attribute `charset'.
	(w3m-input-url): Encode URL with `w3m-default-coding-system'.
	(w3m-about-header): Display the current anchor information.

	* w3m-form.el (w3m-form-parse-and-fontify): Encode URL with the
	attribute `charset'.

2003-06-18  Koichiro Ohba  <koichiro@meadowy.org>

	* shimbun/sb-bbc-rss.el: New backend.

	* shimbun/sb-rss.el (shimbun-rss-process-date): Added nil check.
